--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -61,3 +61,20 @@ th {
     background-color: #02163a;
     color: white;
 }
+
+/* Formulario de login */
+
+.frm-login {
+    background-color: #FFFFFF;
+    width: 100%;
+    max-width: 400px;
+}
+
+.container-login {
+    width: 100%;
+    height: calc(100vh - 76px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: pink;
+}
