--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -86,7 +86,63 @@ th {
     width: 100%;
     height: calc(100vh - 76px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: pink;
+    background-color: rgba(255,255,255, 0.7);
+}
+
+.encabezado-login {
+    font-size: 1.6em;
+    font-weight: bold;
+}
+
+.linea {
+    width: 35%;
+    height: 2px;
+    background-color: #000;
+}
+
+.btn-radius {
+    border-radius: 8px !important;
+    padding: 8px 18px !important;
+}
+
+.btn-azul {
+    background-color: #0684fc !important;
+    color: #fff !important;
+    transition: all 300ms ease-in;
+}
+
+.btn-azul:hover {
+   background-color: #02163a !important;
+}
+
+.div-error {
+    width: 100%;
+    height: 1.1em;
+    margin-top: 1px;
+}
+
+.texto-error {
+    color: #c0392b !important;
+    font-size: 0.9em !important; 
+}
+
+.hay-error {
+    border: solid 1px #c0392b !important;
+}
+
+.hay-error:focus {
+    outline: 0 !important;
+    box-shadow: 0 0 0 0.1rem #c0392b !important;
+}
+
+.correcto {
+    border: solid 1px #16a085 !important;
+}
+
+.correcto:focus {
+    outline: 0 !important;
+    box-shadow: 0 0 0 0.1rem #16a085 !important;
 }
