--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -92,6 +92,10 @@ td {
     border: 2px solid #0684fc;
 }
 
+td {
+    border-radius: 15px;
+}
+
 th {
     background-color: #02163a;
     color: white;
