Diseño de nuevos participantes

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -92,6 +92,12 @@
     background-color: #b7b7b7;
 }
 
+.txt-parti {
+    background-color: white;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+}
+
 
 /* fin de los colores */
 
